styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  min-height: 100vh;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.pago__info {
  justify-content: center;
  display: flex;
  align-items: flex-start;
  gap: 0.5rem;
  width: 100%;
  margin-inline: auto;
}

.logo {
  max-width: 5rem;
}
.padding-sm {
  padding: 1rem;
}
.container {
  margin: 0 auto;
  padding-bottom: 1rem;
  max-width: 600px;
}
.plan__header {
  text-align: center;
  position: relative;
  color: #ffffff;
  background: #03a837;
  font-size: 1.2rem;
  padding: 0.25rem;
}
.plan__header::after {
  content: "";
  width: 4rem;
  height: 4rem;
  display: block;
  background-image: url("images/vianda.png");
  background-size: contain;
  background-position: center center;
  position: absolute;
  top: 0.45rem;
  right: 0;
  z-index: 4;
}
.plan__row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  padding:  0.25rem 4rem 0.25rem 1rem;
}

.plan__text {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}
.plan__text > img {
  max-width: 1.5rem;
}

.text--bold {
  font-weight: 800;
}

.counter__container {
  padding: 0 1rem 0.5rem 1rem;
}
.button {
  cursor: pointer;
  display: block;
  margin: 0 auto 1rem auto;
  border: none;
  padding: 0.5rem 4rem;
  border-radius: 100vh;
  font-size: 1.4rem;
  font-weight: 800;
  background-color: rgb(73 119 179);
  transition: background-color 250ms ease-in;
  color: #ffffff;
}
.button:hover {
  background-color: hsl(214, 42%, 69%);
}
.text--center {
  text-align: center;
}
.counter {
  max-width: 310px;
  background: #03a837;
  color: white;
  padding: 0.15rem 1rem;
  border-radius: 14px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  gap: 0.5rem;
  box-shadow: -6px 6px 0 hsl(139deg 96% 24%);
  margin: 0 auto;
}
.counter__number {
  font-size: 2rem;
  font-weight: 800;
  line-height: 1;
}
.margin-botton--sm {
  margin-bottom: 0.5rem;
}

.plan__container {
  padding-bottom: 1.25rem;
  background-image: url("images/marca\ de\ agua.svg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: contain;
}
.counter__text {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}
.counter__text > img {
  width: 1.5rem;
}
.footer {
  padding: 0 1rem;
  font-size: 0.8rem;
}

.text--small {
  font-size: 0.8rem;
}
.iframe__container {
  width: 100%;
  height: 655px;
  margin-bottom: 1rem;
}

.iframe {
  width: 100%;
  height: 100%;
}

@media (max-width: 480px) {
  .iframe__container {
    height: 705px;
  }
}

@media (max-width: 395px) {
  .iframe__container {
    height: 550px;
  }
}

@media (max-width: 360px) {
  .plan__header {
    font-size: 1rem;
  }
  .counter__number {
    font-size: 1.5rem;
  }
}

